--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -57,10 +57,10 @@ outputs:
       run:
         - {{ pin_subpackage("libcxx", exact=True) }}
       run_constrained:
-        - clang {{ bootstrap_version }}
-        - llvm {{ bootstrap_version }}
-        - llvm-openmp  {{ bootstrap_version }}
-        - llvm-tools  {{ bootstrap_version }}
+        - clang {{ version }}
+        - llvm {{ version }}
+        - llvm-openmp  {{ version }}
+        - llvm-tools  {{ version }}
 
     test:
       requires:
@@ -123,10 +123,10 @@ outputs:
       run:
         - {{ pin_subpackage("libcxxabi", exact=True) }}    # [linux]
       run_constrained:
-        - clang {{ bootstrap_version }}
-        - llvm {{ bootstrap_version }}
-        - llvm-openmp  {{ bootstrap_version }}
-        - llvm-tools  {{ bootstrap_version }}
+        - clang {{ version }}
+        - llvm {{ version }}
+        - llvm-openmp  {{ version }}
+        - llvm-tools  {{ version }}
     test:
       commands:
         # presence of shared & static libraries
