--- a/abs.yaml
+++ b/abs.yaml
@@ -1,3 +1,7 @@
+build_parameters:
+  - "--suppress-variables"
+  - "--error-overlinking"
+  
 channels:
   - https://staging.continuum.io/prefect/llvm-19.1.1-stage0-build-0
 
