--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -16,11 +16,8 @@ dummy_var:              # [osx]
   - 0                   # [osx and x86_64]
   - 1                   # [osx and arm64]
 
-# We don't have this in defaults yet either for linux-64:
-# sysroot_linux-64                2.17     h57e8cba_10  pkgs/main
-# this should be updated to the latests 2.x when that work is done.
 c_stdlib_version:           # [linux]
-  # actually would need >=2.24, but we don't have that in conda-forge yet
-  - "2.17"                  # [linux]
+  #  upstream requires >=2.24
+  - "2.28"                  # [linux]
   # w.r.t. to the ABI of the system libcxx, this would need to be 12.0 on macos
   # but as we only publish one build to main, maintain global lower bounds
