--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -62,10 +62,15 @@ outputs:
       - Library/include/c++         # [win]
       # also for C++20 modules
       - lib/libc++.modules.json     # [unix]
+      - lib/libc++.a                # [unix]
+      - lib/libc++experimental.a    # [unix]
+      - Library/lib/c++*.lib        # [win]
+      - Library/lib/libc++*.lib     # [win]
     requirements:
       host:
         - {{ pin_subpackage("libcxx", exact=True) }}
       run:
+        - tzdata
         - {{ pin_subpackage("libcxx", exact=True) }}
       run_constrained:
         - clang {{ version }}
@@ -83,14 +88,12 @@ outputs:
         - llvm-tools             # [osx]
         - {{ compiler('cxx') }}   # [not linux]
         - {{ compiler('c') }}     # [not linux]
-        - {{ stdlib('c') }}       # [osx]
       files:
         - test_sources
         - compile_test.sh   # [unix]
         - compile_test.bat  # [win]
       commands:
         # Dummy var for different hashes
-        - echo {{ dummy_var }}                                    # [osx]
         - echo {{ macos_min_version }}                            # [osx]
         - if not exist %LIBRARY_INC%\\c++\\v1\\iterator exit 1    # [win]
         - test -f $PREFIX/include/c++/v1/iterator                 # [unix]
@@ -122,12 +125,9 @@ outputs:
       - lib/libc++.dylib            # [osx]
       - lib/libc++.*.dylib          # [osx]
       - Library/bin/c++*.dll        # [win]
-      - lib/libc++.a                # [unix]
-      - lib/libc++experimental.*    # [unix]
-      - Library/lib/c++*.lib        # [win]
-      - Library/lib/libc++*.lib     # [win]
     requirements:
       build:
+        - {{ stdlib('c') }}
         - {{ compiler('c') }}
         - {{ compiler('cxx') }}
       host:
@@ -156,6 +156,7 @@ outputs:
       - lib/libc++abi.*
     requirements:
       build:
+        - {{ stdlib('c') }}
         - {{ compiler('c') }}
       run_constrained:
         - libcxx {{ version }}.*
