--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -12,6 +12,8 @@ cxx_compiler_version:
   - 11.2                # [linux]
   - 19                  # [osx]
 
+ANACONDA_ROCKET_GLIBC: "2.28"
+
 c_stdlib_version:           # [linux]
   # upstream needs >=2.24
   - "2.28"                  # [linux]
