--- a/abs.yaml
+++ b/abs.yaml
@@ -1,4 +1,1 @@
-build_parameters:
-  - "--suppress-variables"
-  - "--error-overlinking"
-  - "-c https://staging.continuum.io/prefect/llvm-19.1.7-stage2-build-2"
+aggregate_check: false
