--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,5 @@
 {% set version = "20.1.8" %}
-{% set major = version.split(".")[0] %}
+{% set major = version.split(".")[0]|int %}
 
 {% set bootstrap_version = "20.1.8" %}
 
@@ -20,7 +20,7 @@ source:
       - patches/0003-patch-__libcpp_tzdb_directory-to-allow-use-on-osx.patch  # [osx]
 
 build:
-  number: 0
+  number: 1
   skip: true  # [win]
   
   # Prevent mixing with GNU's implementation
@@ -73,12 +73,16 @@ outputs:
         - {{ pin_subpackage("libcxx", exact=True) }}
       run:
         - tzdata
-        - {{ pin_subpackage("libcxx", exact=True) }}
+        - {{ pin_subpackage("libcxx", max_pin=None) }}
+        - libcxx >={{ version }},<{{ major + 2 }}
       run_constrained:
-        - clang {{ version }}
-        - llvm {{ version }}
-        - llvm-openmp  {{ version }}
-        - llvm-tools  {{ version }}
+        # The runtime support tools' APIs with the LibCXX libraries will 
+        # generally remain forwards and backwards compatible, for at least 
+        # one major release. https://www.libcxx.org/INSTALL.html
+        - clang >={{ major }},<{{ major + 2 }}
+        - llvm >={{ major }},<{{ major + 2 }}
+        - llvm-openmp  >={{ major }},<{{ major + 2 }}
+        - llvm-tools  >={{ major }},<{{ major + 2 }}
 
     test:
       requires:
@@ -142,10 +146,13 @@ outputs:
       run:
         - {{ pin_subpackage("libcxxabi", exact=True) }}    # [linux]
       run_constrained:
-        - clang {{ version }}
-        - llvm {{ version }}
-        - llvm-openmp  {{ version }}
-        - llvm-tools  {{ version }}
+        # The runtime support tools' APIs with the LibCXX libraries will 
+        # generally remain forwards and backwards compatible, for at least 
+        # one major release. https://www.libcxx.org/INSTALL.html
+        - clang >={{ major }},<{{ major + 2 }}
+        - llvm >={{ major }},<{{ major + 2 }}
+        - llvm-openmp  >={{ major }},<{{ major + 2 }}
+        - llvm-tools  >={{ major }},<{{ major + 2 }}
     test:
       commands:
         # Test for versioned runtime libraries
